model8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
         app: httpserver
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - httpserver
            topologyKey: kubernetes.io/hostname
      volumes:
      - name: tmpdir
        emptyDir:
          sizeLimit: 100Mi
      - name: config
        configMap:
          name: http-server-config
      containers:
      - image: eachakeke/httpserver:v2.0
        name: httpserver
        imagePullPolicy: Always
        ports:
        - name: http-80
          containerPort: 80
        resources:
          limits:
            cpu: 0.2
            memory: 200Mi
          requests:
            cpu: 0.1
            memory: 100Mi
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            port: 80
            path: /healthz
            scheme: HTTP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            port: 80
            path: /healthz
            scheme: HTTP
        startupProbe:
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            port: 80
            path: /healthz
            scheme: HTTP
        lifecycle:
          preStop:
            exec:
              command:
              - pkill
              - tini
        volumeMounts:
        - name: tmpdir
          mountPath: /mnt
        - name: config
          mountPath: /opt/config
